# SecondBrain

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  PLAN.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.claude/: launch.json
api/: .env.example  README.md  pyproject.toml
api/src/brain_api/: __init__.py  main.py  normaliser.py  progress.py  routing_io.py  settings.py  taxonomy.py
api/src/brain_api/adapters/: __init__.py  apify_generic.py  http_readability.py  x_api.py  youtube.py
api/src/brain_api/config/: __init__.py  load_routing.py
api/src/brain_api/ingest/: __init__.py  fetch_bundle.py  run_ingest.py
api/src/brain_api/llm/: __init__.py  enrich.py  enrich_source.py  extract_categories.py  translate.py
api/src/brain_api/routes/: ingest.py  taxonomy.py
api/src/brain_api/types/: __init__.py  capture.py
api/src/brain_api/vault/: __init__.py  writer.py
api/tests/: test_ingest_route.py  test_load_routing.py  test_progress.py  test_run_ingest_error.py  test_settings.py  test_taxonomy.py  test_taxonomy_route.py  test_writer_unit.py  test_x_api.py  test_youtube_row.py
config/: categories.example.yaml  routing.example.yaml
docs/: reader-web.md  reader.md
github-profile/: README.md
reader/: README.md  index.html  package.json  pnpm-lock.yaml  serve.ts  tsconfig.json  tsconfig.scripts.json  vite.config.ts
reader-web/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  serve.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
scripts/: fetch-x-article.py  migrate-vault-filenames.ts  (+5 more)
(+156 files in other folders)
